# BankMarketingClassification

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
results/: all_features_validation_results.csv  baseline_results.csv  evaluation_summary.txt  feature_group_experiment_comparison.csv  feature_importance.csv  feature_importance_all_models.csv  feature_importance_decision_tree.csv  feature_importance_gradient_boosting.csv  feature_importance_logistic_regression.csv  feature_importance_random_forest.csv  feature_selection_comparison.csv  feature_selection_comparison_all_models.csv  feature_selection_comparison_decision_tree.csv  feature_selection_comparison_gradient_boosting.csv  feature_selection_comparison_logistic_regression.csv  feature_selection_comparison_random_forest.csv  test_results.csv  threshold_tuning_results.csv  tuned_validation_results.csv  tuning_comparison.csv  tuning_improvement_comparison.csv  tuning_top10.csv  validation_results.csv  without_economic_features_validation_results.csv
src/: app.py  data_preparation.py  eda.py  feature_selection.py  hyperparameter_tunning.py  model_evaluation.py  model_training.py
