[project]
name = "bank-marketing-classification"
version = "1.0.0"
description = "Bank Marketing Classification - SAUSAU predmetni projekat 2026"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "imbalanced-learn>=0.10.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "flask>=2.3.0",
    "pdfplumber>=0.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
